# legal_agent_env

./: Dockerfile  README.md  app.py  client.py  inference.py  legal_environment.py  models.py  openenv.yaml  pyproject.toml  requirements.txt
legal_env/: README.md  client.py  inference.py  models.py  openenv.yaml  requirements.txt
legal_env/server/: app.py  legal_environment.py
server/: app.py  legal_environment.py
