[project]
name = "legal-agent-env"
version = "1.1.0"
description = "Legal Agent OpenEnv - RL environment for legal reasoning tasks"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
dependencies = [
    "fastapi==0.110.0",
    "uvicorn==0.29.0",
    "pydantic==2.6.0",
    "requests==2.31.0",
    "httpx==0.27.0",
    "pyyaml==6.0.1",
    "openai",
    "python-dotenv",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
